--- a/savefile.ini
+++ b/savefile.ini
@@ -68,3 +68,15 @@ astronaut={
 "v8": [0, 0, 0, 1, 0, 0, 1, 0, 0, 0],
 "v9": [0, 0, 0, 1, 0, 0, 1, 0, 0, 0]
 }
+heart={
+"v1": [0, 1, 1, 0, 0, 0, 0, 1, 1, 0],
+"v10": [0, 0, 0, 0, 1, 1, 0, 0, 0, 0],
+"v2": [1, 1, 1, 1, 0, 0, 1, 1, 1, 1],
+"v3": [1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
+"v4": [1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
+"v5": [1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
+"v6": [0, 1, 1, 1, 1, 1, 1, 1, 1, 0],
+"v7": [0, 1, 1, 1, 1, 1, 1, 1, 1, 0],
+"v8": [0, 0, 1, 1, 1, 1, 1, 1, 0, 0],
+"v9": [0, 0, 0, 1, 1, 1, 1, 0, 0, 0]
+}
